# Django-Capstone-Q4

./: .gitignore  Procfile  README.md  db.sqlite3  db_name  pyproject.toml  requirements.txt
capstone_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
capstone_app/migrations/: 0001_initial.py  0002_auto_20210408_2337.py  0002_auto_20210412_1935.py  0002_auto_20210417_2322.py  0003_player_about.py  0004_auto_20210418_2047.py  0004_auto_20210418_2142.py  0005_auto_20210418_2127.py  0006_auto_20210418_2128.py  0007_auto_20210418_2203.py  0008_auto_20210418_2211.py  0009_auto_20210418_2218.py  0010_auto_20210418_2224.py
capstone_django/: asgi.py  settings.py  urls.py  wsgi.py
capstone_django/static/js/: index.js
static/css/: 404.css  500.css  aboutus.css  base.css  card.css  edit_profile.css  favorite_game.css  footer.css  game.css  generic_form.css  index.css  login.css  player.css  review.css  search_cards.css
static/js/: 404.js  500.js  base.js  index.js  strippers.js
staticfiles/css/: card.css  game.css  generic_form.css  index.css  navbar.css  new_review.css  player.css
staticfiles/js/: index.js
templates/: 404.html  500.html  Reviews.html  aboutus.html  base.html  card.html  edit_profile.html  favorite_game.html  footer.html  game.html  games.html  generic_form.html  index.html  navbar.html  newreview.html  player.html  search_page.html  signup.html
templates/registration/: generic_form.html  login.html  signup.html
