[tool.poetry]
name = "django-capstone-q4"
version = "0.1.0"
description = ""
authors = ["Jason Mckee-Bakos <jasonmckee44@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
django-environ = "^0.4.5"
Pillow = "^8.2.0"
requests = "^2.25.1"
whitenoise = "^5.2.0"
Rhino = "^0.0.5"
django-crispy-forms = "^1.11.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
